<resources>
    <string name="app_name">Travel and Co</string>
    <string name="created_by">Created By Stan Maeyens</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <string name="money_list">Money</string>
    <string name="luggage_list">Luggage</string>
    <string name="todo_list">To Do</string>
    <string name="map">Map</string>

    <string name="no_transactions">You didn\'t add any transactions</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name (needed if first login)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_name">This name is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_travel_picker">TravelPickerActivity</string>
</resources>
