<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!-- TODO: change icon-->
        <item
            android:id="@+id/nav_moneyList"
            android:icon="@drawable/add_button"
            android:title="@string/money_list" />
        <item
            android:id="@+id/nav_luggageList"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/luggage_list" />
        <item
            android:id="@+id/nav_todoList"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/todo_list" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/map" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
